<resources>
    <string name="app_name">Score Keeper</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="basketball_iv">basket ball vector</string>
    <string name="team_hint">Enter team name</string>
    <string name="btn_start_text">Start Game</string>
    <string name="placeholder_final_score">Team Final score</string>
    <string name="btn_newgame">New Game</string>
    <string name="placeholder_team_name">Team Name</string>
    <string name="placeholder_score">0</string>
    <string name="q1">Q1</string>
    <string name="q2">Q2</string>
    <string name="q3">Q3</string>
    <string name="q4">Q4</string>
    <string name="percent_header">Shooting Percentages</string>
    <string name="placeholder_percent">0%</string>
    <string name="btn_ft">Free Throw</string>
    <string name="btn_2pt">2pt</string>
    <string name="btn_3pt">3pt</string>
    <string name="btn_miss">Missed Shot</string>
    <string name="btn_end">End Game</string>
</resources>