<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".TitleFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/court"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:id="@+id/titlefrag_iv_basketball_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/basketball_iv"
            android:src="@drawable/ic_basketball"
            tools:ignore="ImageContrastCheck" />

        <EditText
            android:id="@+id/titlefrag_et_team1_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:ems="10"
            android:fontFamily="@font/squada_one"
            android:hint="@string/team_hint"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:padding="20dp"
            android:textAlignment="center"
            android:textColor="@color/team1"
            android:textColorHint="@color/team1"
            android:textSize="36sp"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/titlefrag_bt_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:backgroundTint="@color/ewing"
            android:fontFamily="@font/squada_one"
            android:text="@string/btn_start_text"
            android:textAlignment="center"
            android:textSize="36sp"
            app:cornerRadius="20dp"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/titlefrag_et_team2_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:ems="10"
            android:fontFamily="@font/squada_one"
            android:hint="@string/team_hint"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:padding="20dp"
            android:textAlignment="center"
            android:textColor="@color/team2"
            android:textColorHint="@color/team2"
            android:textSize="36sp"
            tools:ignore="TextContrastCheck" />

        <ImageView
            android:id="@+id/titlefrag_iv_basketball_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/basketball_iv"
            android:src="@drawable/ic_basketball"
            tools:ignore="ImageContrastCheck" />

    </LinearLayout>
</ScrollView>