<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".GameOverFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/court"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:id="@+id/gameoverfrag_iv_basketball_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/basketball_iv"
            android:src="@drawable/ic_basketball"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/gameoverfrag_tv_team1_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/squada_one"
            android:padding="20dp"
            android:text="@string/placeholder_final_score"
            android:textAlignment="center"
            android:textColor="@color/team1"
            android:textSize="36sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/gameoverfrag_tv_team2_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/squada_one"
            android:padding="20dp"
            android:text="@string/placeholder_final_score"
            android:textAlignment="center"
            android:textColor="@color/team2"
            android:textSize="36sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/gameoverfrag_tv_winner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/squada_one"
            android:padding="20dp"
            android:text="@string/placeholder_final_score"
            android:textAlignment="center"
            android:textSize="64sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/gameoverfrag_bt_new_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:backgroundTint="@color/ewing"
            android:fontFamily="@font/squada_one"
            android:text="@string/btn_newgame"
            android:textAlignment="center"
            android:textSize="36sp"
            app:cornerRadius="20dp"
            tools:ignore="TextContrastCheck" />

        <ImageView
            android:id="@+id/gameoverfrag_iv_basketball_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/basketball_iv"
            android:src="@drawable/ic_basketball"
            tools:ignore="ImageContrastCheck" />
    </LinearLayout>
</ScrollView>